Add Know Your Delegate table

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -91,42 +91,120 @@
             </li>
         </ul>
 
+        <table class="know-your-rep">
+            <caption>Know Your Delegate</caption>
+            <colgroup>
+                <col>
+                <col class="derek">
+                <col class="other pam">
+                <col class="other mark">
+                <col class="other ted">
+            </colgroup>
+            <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"><img src="/images/kent.svg" alt="Derek Kent" width="120"></th>
+                    <th scope="col">Pam Beidle</th>
+                    <th scope="col">Mark Chang</th>
+                    <th scope="col">Ted Sophocleus</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Pro-choice</th>
+                    <td>
+                        <a href="/issues/women">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                </tr>
+                <tr>
+                    <!-- http://openstates.org/md/votes/MDV00020156/ -->
+                    <!-- Ted 0% Equality Maryland -->
+                    <th scope="row">LGBTQ Rights</th>
+                    <td>
+                        <a href="/issues/lgbt">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                </tr>
+                <tr>
+                    <!-- HB 121 (2015) all 3 -->
+                    <!-- HB 124 (2015) mark and ted -->
+                    <!-- HB980 (2016) mark and ted -->
+                    <th scope="row">Criminal Justice Reform</th>
+                    <td>
+                        <a href="/issues/justice">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                </tr>
+                <tr>
+                    <!-- http://openstates.org/md/votes/MDV00016942/ -->
+                    <!-- http://mgaleg.maryland.gov/2014RS/amds/bil_0005/hb0295_34392001.pdf -->
+                    <th scope="row">$15 Minimum Wage</th>
+                    <td>
+                        <a href="/issues/minimum-wage">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
+                    <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
+                </tr>
+                <tr>
+                    <!-- http://openstates.org/md/votes/MDV00022205/ -->
+                    <th scope="row">Paid Sick Leave</th>
+                    <td>
+                        <a href="/issues/family">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                </tr>
+                <tr>
+                    <!-- HB 1002 (2016) -->
+                    <!-- Ted endorsed by NRA -->
+                    <th scope="row">Responsible Gun Rights</th>
+                    <td>
+                        <a href="/issues/guns">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                </tr>
+                <tr>
+                    <th scope="row">Veteran</th>
+                    <td>
+                        <a href="/about">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                </tr>
+            </tbody>
+        </table>
+
         <div class="starts-with-you">
-            <h1>It Starts With You</h1>
             <p>
-                How well do you know your representatives?
-            </p>
-
-            <p>
-                Do you know that your <a href="/map">District 32</a> State representatives
-                have voted consistently <em>against</em> women's rights?
-            </p>
-
-            <p>
-                All three of our current delegates have consistently received a 0% rating from
-                NARAL Pro-Choice Maryland.
-            </p>
-
-            <p>
-                Do you know that Mark Chang was endorsed by the homophobic organization
-                Protect Marriage Maryland? Or that Ted Sophocleus received a 0% rating
-                from Equality Maryland? Or that all three of our delegates voted against
-                SB 743 (2015) — legislation that was designed to protect LGBT rights?<br>
-            </p>
-
-            <p>
-                Do you know that Ted Sophocleus is <em>endorsed by the NRA</em> and voted against
-                legislation to prohibit firearms on college campuses?
-            </p>
-
-            <p>
-                Do you know that Pam Beidle voted <em>against</em> guaranteed paid sick leave?
-            </p>
-
-            <p>
-                <strong>The truth is, no other Democratic delegation in Maryland
-                has voted with Republican majorities more frequently than the delegates
-                from District 32 — and it's not even close.</strong>
+                No other Democratic delegation in Maryland has voted with Republican
+                majorities more frequently than the delegates from
+                <a href="/map">District 32</a> — and it's not even close.
             </p>
 
             <p>
