Add citations to delegate comparisons

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -117,65 +117,55 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 3</sup></td>
                 </tr>
                 <tr>
-                    <!-- http://openstates.org/md/votes/MDV00020156/ -->
-                    <!-- Ted 0% Equality Maryland -->
                     <th scope="row">LGBTQ Rights</th>
                     <td>
                         <a href="/issues/lgbt">
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 5</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 6</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 5</sup></td>
                 </tr>
                 <tr>
-                    <!-- HB 121 (2015) all 3 -->
-                    <!-- HB 124 (2015) mark and ted -->
-                    <!-- HB980 (2016) mark and ted -->
                     <th scope="row">Criminal Justice Reform</th>
                     <td>
                         <a href="/issues/justice">
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>9</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>7, 8, 9</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>7, 8, 9</sup></td>
                 </tr>
                 <tr>
-                    <!-- http://openstates.org/md/votes/MDV00016942/ -->
-                    <!-- http://mgaleg.maryland.gov/2014RS/amds/bil_0005/hb0295_34392001.pdf -->
                     <th scope="row">$15 Minimum Wage</th>
                     <td>
                         <a href="/issues/minimum-wage">
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>10</sup></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                 </tr>
                 <tr>
-                    <!-- http://openstates.org/md/votes/MDV00022205/ -->
                     <th scope="row">Paid Sick Leave</th>
                     <td>
                         <a href="/issues/family">
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
                 <tr>
-                    <!-- HB 1002 (2016) -->
-                    <!-- Ted endorsed by NRA -->
                     <th scope="row">Responsible Gun Rights</th>
                     <td>
                         <a href="/issues/guns">
@@ -184,7 +174,7 @@
                     </td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>12, 13</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -199,6 +189,72 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="toggle-citations{model.citations ? ' show' : ''}" tabindex="0">
+            Citations
+        </div>
+
+        <ol class="citations{model.citations ? '' : ' hidden'}">
+            <li>
+                Received a <a href="http://votesmart.org/interest-group/910/rating/9013">100%
+                voting record</a> from the anti-choice group Maryland Right to Life.
+            </li>
+            <li>
+                <a href="http://openstates.org/md/bills/2016/HB603/">Co-sponsored</a> anti-abortion bill
+                (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0603F.pdf">HB603 - 2016</a>).
+            </li>
+            <li>
+                <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">Endorsed</a>
+                by anti-choice group Maryland Right to Life</a> in 2014.
+            </li>
+            <li>
+                Voted against Pro-LGBTQ legislation
+                (<a href="http://openstates.org/md/votes/MDV00020156/">SB743 — 2015</a>).
+                Only one other Democrat voted against it.
+            </li>
+            <li>
+                Received a <a href="https://votesmart.org/interest-group/912/rating/4334">0%
+                rating</a> from Equality Maryland in 2008.</a>
+            </li>
+            <li>
+                <a href="https://votesmart.org/interest-group/2149/protect-marriage-maryland">Endorsed</a>
+                by anti-gay marriage group Protect Marriage Maryland in 2014.
+            </li>
+            <li>
+                <a href="http://openstates.org/md/votes/MDV00020673/">Voted against</a> repealing
+                mandatory minimum sentences for drug-related offenses.
+                (<a href="http://mgaleg.maryland.gov/2015RS/Chapters_noln/CH_490_hb0121e.pdf">HB121 - 2015</a>).
+            </li>
+            <li>
+                <a href="http://openstates.org/md/votes/MDV00019608/">Voted against</a> expunging
+                convictions for crimes that no longer exist.
+                (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0124t.pdf">HB124 - 2015</a>).
+            </li>
+            <li>
+                <a href="http://openstates.org/md/votes/MDV00019608/">Voted against</a> restoring
+                voting rights to ex-felons who served their time.
+                (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0980t.pdf">HB980 - 2015</a>).
+            </li>
+            <li>
+                <a href="http://openstates.org/md/votes/MDV00020673/">Voted against</a>
+                amendment to increase minimum wage to $11.37 by 2023
+                (<a href="http://mgaleg.maryland.gov/2014RS/amds/bil_0005/hb0295_34392001.pdf">HB0295/343920/1 - 2014</a>).
+            </li>
+            <li>
+                <a href="http://openstates.org/md/votes/MDV00022205/">Voted against</a> requiring
+                employers to provide paid sick leave.
+                (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0580t.pdf">HB580 - 2016</a>).
+            </li>
+            <li>
+                <a href="http://openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
+                firearms from college campuses.
+                (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
+            </li>
+            <li>
+                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a>
+                by the NRA</a> in 2014.
+            </li>
+        </ol>
 
         <div class="starts-with-you">
             <p>
