Center text on map page

--- a/src/app/pages/map/map.scss
+++ b/src/app/pages/map/map.scss
@@ -14,6 +14,10 @@
         margin-bottom: 3rem;
     }
 
+    > article {
+        text-align: center;
+    }
+
     .district32-map {
         background-color: color(gray, light);
         height: 40vw;
