Add Environment Issues quote

--- a/src/app/pages/issues/environment/environment.html
+++ b/src/app/pages/issues/environment/environment.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Protecting Our Environment</h1>
 
+        <blockquote class="issue">
+            A nation that destroys its soils destroys itself. Forests are the lungs of our land, purifying the air and giving fresh strength to our people.<br>
+            — Franklin D. Roosevelt
+        </blockquote>
+
         <p>
             Coming Soon...
         </p>
