Add Fracking issues quote

--- a/src/app/pages/issues/fracking/fracking.html
+++ b/src/app/pages/issues/fracking/fracking.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Ban Fracking</h1>
 
+        <blockquote class="issue">
+            When the well's dry, we know the worth of water.<br>
+            — Benjamin Franklin
+        </blockquote>
+
         <p>
             Coming Soon...
         </p>
