Add Universal Health Insurance issue quote

--- a/src/app/pages/issues/healthcare/healthcare.html
+++ b/src/app/pages/issues/healthcare/healthcare.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Universal Health Insurance</h1>
 
+        <blockquote class="issue">
+            America's health care system is neither healthy, caring, nor a system.<br>
+            — Walter Cronkite
+        </blockquote>
+
         <p>
             Medical bills are the leading cause of bankruptcy in the United
             States, outnumbering <em>all other causes combined</em>. More than
