Prevent pixels showing below banner curve

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -157,7 +157,7 @@ p {
         background-position: bottom center;
         background-repeat: no-repeat;
         background-size: cover;
-        bottom: 0;
+        bottom: -0.1rem;
         content: '';
         height: 5rem;
         left: 0;
