--- a/src/app/pages/issues/environmental/environmental.scss
+++ b/src/app/pages/issues/environmental/environmental.scss
@@ -7,5 +7,9 @@
 
     > .banner {
         background-image: url('/images/banners/environment.jpg');
+
+        @media (min-width: 1200px) {
+            background-position: center 25%;
+        }
     }
 }
