--- a/src/app/pages/issues/fracking/fracking.scss
+++ b/src/app/pages/issues/fracking/fracking.scss
@@ -6,5 +6,9 @@
 
     > .banner {
         background-image: url('/images/banners/environment.jpg');
+
+        @media (min-width: 1200px) {
+            background-position: center 25%;
+        }
     }
 }
