--- a/src/app/pages/issues/women/women.scss
+++ b/src/app/pages/issues/women/women.scss
@@ -6,5 +6,9 @@
 
     > .banner {
         background-image: url('/images/banners/womens-rights.jpg');
+
+        @media (min-width: 1000px) {
+            background-position: center 25%;
+        }
     }
 }
