--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -158,6 +158,7 @@
             }
 
             img {
+                max-height: 100%;
                 max-width: 30vw;
             }
         }
