Hide input when transforming label into button
Fixes a display issue with IE11 and prevents clicks from
selecting the wrong element in all browsers.

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -89,6 +89,13 @@ input {
     }
 }
 
+[type="checkbox"],
+[type="radio"] {
+    @at-root .btn > & {
+        display: none;
+    }
+}
+
 [type="submit"] {
     margin-top: 3rem;
 }
