Hide img link borders in IE10

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -123,6 +123,10 @@ p {
     font-weight: 400;
 }
 
+img {
+    border: 0; // Hide borders in IE10
+}
+
 @import 'components/blockquotes';
 @import 'components/blocks';
 @import 'components/buttons';
