--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -123,6 +123,7 @@
         input {
             cursor: pointer;
             display: inline-block;
+            flex: 0 0 auto;
             font-family: $serif;
             font-size: 1.8rem;
             font-weight: bold;
