--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -40,7 +40,7 @@ $mobile-height: 4rem;
         align-items: center;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-between;
         list-style-type: none;
         margin: 0;
         max-height: $mobile-height;
