--- a/src/app/pages/petitions/petition.html
+++ b/src/app/pages/petitions/petition.html
@@ -40,6 +40,7 @@
                 <if condition="model.error">
                     <span class="error">{model.error}</span>
                 </if>
+                <input type="hidden" value="{model.petition.slug}">
                 <input type="submit" class="btn btn-red{model.submitting ? ' disabled' : ''}" value="Add Your Name">
             </form>
         </div>
