Add DfA endorsement support request

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -3,6 +3,45 @@
     <article>
         <h1>News</h1>
 
+        <article class="newsletter">
+            <h2>Tell Democracy for America to Endorse Derek</h2>
+            <time datetime="2017-01-18">Jan. 18, 2017</time>
+
+            <p>
+                Democracy for America is considering endorsing Derek Kent for
+                the District 32 primary, but they need to <a href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">hear from supporters
+                like you</a>!
+            </p>
+
+            <p>
+                Democracy for America is a grassroots, member-driven political action
+                committee that works to get progressive leaders like Derek elected.
+                Every endorsement they make is informed by individuals like you, not
+                a select group of wealthy donors.
+            </p>
+
+            <p>
+                It only takes a few seconds to <a href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">voice your support</a>,
+                but it could make a huge difference.
+            </p>
+
+            <p>
+                Let's not go another four years without a strong voice from Anne Arundel
+                County speaking up for a middle class that has been continuously eroded
+                for decades while the very wealthiest members of society become even
+                wealthier.
+            </p>
+
+            <p>
+                <a href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">Voice your support</a> now, and together we can make our government work
+                for the people again.
+            </p>
+
+            <p class="center">
+                <a class="btn btn-blue" href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">Voice Your Support</a>
+            </p>
+        </article>
+
         <article class="press-release">
             <h2>Derek Kent Elected to District 32 Executive Board</h2>
             <time datetime="2016-11-17">Nov. 17, 2016</time>
