Mention 'add your name' in DfA request

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -21,7 +21,7 @@
             </p>
 
             <p>
-                It only takes a few seconds to <a href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">voice your support</a>,
+                It only takes a few seconds to <a href="https://www2.democracyforamerica.com/endorsement_applicants/702-friends-of-derek-kent">add your name</a>,
                 but it could make a huge difference.
             </p>
 
