Add copy for clean energy issue

--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -4,7 +4,54 @@
         <h1>Clean Energy</h1>
 
         <p>
-            Coming Soon...
+            Over half of Maryland’s electricity still comes from fossil fuels like
+            coal and natural gas. In Anne Arundel County, we have a 34-year old
+            coal-fired power plant and a 62-year old predominantly coal and oil-fired
+            power plant, both less than 5 miles east of Glen Bernie.
+        </p>
+
+        <p>
+            Collectively, these plants consume approximately 4.8 <strong>million</strong> tons of
+            coal annually, and they are a big reason why Anne Arundel County
+            <a href="http://www.lung.org/our-initiatives/healthy-air/sota/city-rankings/states/maryland/">received
+            an F for air quality from the American Lung Association</a>. The air
+            we breathe every day is killing us, putting us \"at risk for premature death,
+            aggravated asthma, difficulty breathing, cardiovascular harm and lower birth weight\".
+        </p>
+
+        <p>
+            And that doesn't even begin to take into account the impact fossil fuels have
+            on climate change and sea level rise, which Maryland is also particularly
+            vulnerable to.
+        </p>
+
+        <p>
+            We must do more now to shift our energy production to clean and
+            renewable sources.
+        </p>
+
+        <p>
+            The <a href="http://mgaleg.maryland.gov/webmga/frmMain.aspx?id=hb1106&stab=01&pid=billpage&tab=subject3&ys=2016RS">Clean Energy Jobs Act</a>
+            is a great start. It would require Maryland to get 25% of its power
+            from clean energy sources like wind and solar by 2020, but we can't
+            stop there.
+        </p>
+
+        <p>
+            Maryland has a wealth of potential wind energy available in the Chesapeake Bay
+            that could supply the entire state with 67% of its energy needs using
+            existing offshore wind power technology.
+        </p>
+
+        <p>
+            A commitment to expanding our use of renewable energy to 50% by 2035
+            would not just be good for the environment and our health, but would
+            also create thousands of well-paying jobs right here in Anne Arundel
+            County.
+        </p>
+
+        <p>
+            Investing now in a renewable energy future just makes sense.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
