Add video to clean energy issue

--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -30,6 +30,12 @@
             renewable sources.
         </p>
 
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/irlus-5T5LI" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <p>
             The <a href="http://mgaleg.maryland.gov/webmga/frmMain.aspx?id=hb1106&stab=01&pid=billpage&tab=subject3&ys=2016RS">Clean Energy Jobs Act</a>
             is a great start. It would require Maryland to get 25% of its power
@@ -44,7 +50,7 @@
         </p>
 
         <p>
-            A commitment to expanding our use of renewable energy to 50% by 2035
+            A commitment to expanding our use of renewable energy to 40% by 2025
             would not just be good for the environment and our health, but would
             also create thousands of well-paying jobs right here in Anne Arundel
             County.
