Add clean energy issue quote

--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Clean Energy</h1>
 
+        <blockquote class="issue">
+            Anything else you’re interested in is not going to happen if you can’t breathe the air and drink the water. Don’t sit this one out. Do something.<br>
+            — Carl Sagan
+        </blockquote>
+
         <p>
             Over half of Maryland’s electricity still comes from fossil fuels like
             coal and natural gas. In Anne Arundel County, we have a 34-year old
