Add environmental issue quote

--- a/src/app/pages/issues/environmental/environmental.html
+++ b/src/app/pages/issues/environmental/environmental.html
@@ -3,6 +3,11 @@
     <article>
         <h1>Protect Our Environment</h1>
 
+        <blockquote class="issue">
+            You cannot get through a single day without having an impact on the world around you. What you do makes a difference, and you have to decide what kind of difference you want to make.<br>
+            — Jane Goodall
+        </blockquote>
+
         <ul class="issue-blocks">
             <li>
                 <a href="/issues/energy">
