Add social links to footer

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -28,6 +28,15 @@
         Hanover, MD 21076
     </address>
 
+    <div class="social">
+        <a href="https://facebook.com/DerekKentMD">
+            <img src="/images/social/facebook.svg" alt="Facebook">
+        </a>
+        <a href="https://twitter.com/DerekKent">
+            <img src="/images/social/twitter.svg" alt="Twitter">
+        </a>
+    </div>
+
     <div class="paid">
         <span>Authority: Friends of Derek Kent, Phaby Kent, Treasurer</span>
     </div>
