Fix privacy policy email header

--- a/src/app/pages/privacy/privacy.html
+++ b/src/app/pages/privacy/privacy.html
@@ -216,6 +216,6 @@
 
         <h2>How to contact us</h2>
 
-        <p>Questions regarding this Privacy Policy can be directed to <a href="mailto:info@derekkent.com?subject=Accessibility Question">info@derekkent.com</a>.</p>
+        <p>Questions regarding this Privacy Policy can be directed to <a href="mailto:info@derekkent.com?subject=Privacy Policy Question">info@derekkent.com</a>.</p>
     </article>
 </template>
